--- a/public/static/styles/login.css
+++ b/public/static/styles/login.css
@@ -104,4 +104,5 @@ input:-webkit-autofill:active {
 	-webkit-text-fill-color: #000000 !important;
 	-webkit-box-shadow: 0 0 0 25px #faf16e inset !important;
 	border-color: #6d643c !important;
+	box-shadow: 0 0 0 25px #faf16e inset;
 }
