--- a/panel/views/login.ejs
+++ b/panel/views/login.ejs
@@ -1,56 +1,75 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>Sherlock</title>
-  <link href="/static/styles/login.css" rel="stylesheet">
-  <link href="https://use.typekit.net/fjt0pow.css" rel="stylesheet">
-  <link href="https://rsms.me/inter/inter.css" rel="stylesheet">
-  <script src="/static/scripts/jquery/3.1.1.js"></script>
+  <link href="/static/styles/login.css" rel="stylesheet" />
+  <link href="https://use.typekit.net/fjt0pow.css" rel="stylesheet" />
+  <link href="https://rsms.me/inter/inter.css" rel="stylesheet" />
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 </head>
-<body>
 
-  <div class="container">
+<body>
+  <div id="app" class="container">
     <div class="header">
-      <img src="/static/images/logo.svg" height="72px">
+      <img src="/static/images/logo.svg" height="72px" />
       <div class="title">Sherlock</div>
-      <div class="errors"></div>
+      <div v-if="error" class="errors">{{ errorMessage }}</div>
     </div>
     <div class="form">
       <form target="" id="form">
-        <input id="username" type="text" placeholder="Username" name="username" required>
-        <input id="password" type="password" placeholder="Password" name="password" required>
+        <input
+        v-model="username"
+        id="username"
+        type="text"
+        placeholder="Username"
+        name="username"
+        required
+        />
+        <input
+        v-model="password"
+        id="password"
+        type="password"
+        placeholder="Password"
+        name="password"
+        required
+        />
         <div class="submit">
-          <input type="submit" value="Let's Go →">
+          <input @click="handleSubmit" type="submit" value="Let's Go →" />
         </div>
       </form>
     </div>
   </div>
-
+  
   <script>
-    $("#form").on("submit", function(event) {
-      event.preventDefault();
-      var username = $("#username").val();
-      var password = $("#password").val();
-      var payload = { username: username, password: password };
-
-      if (!username || !password) {
-        $(".errors").text('Please fill in all the fields').show();
-        return;
-      }
-
-      $.post("/api/login", payload, function(data) {
-        if (data.ok) {
-          window.location.replace("/panel/me");
-        } else {
-          $(".errors").text(data.error).show();
-          return;
+    new Vue({
+      el: "#app",
+      data: {
+        username: null,
+        password: null,
+        error: false,
+        errorMessage: null
+      },
+      methods: {
+        handleSubmit: function(event) {
+          event.preventDefault();
+          var payload = { username: this.username, password: this.password };
+          if (!this.username || !this.password) {
+            this.errorMessage = "Please fill in all the fields";
+            return (this.error = true);
+          }
+          axios.post("/api/login", payload).then(response => {
+            if (response.data.ok) {
+              window.location.replace("/panel/me");
+            } else {
+              this.errorMessage = response.data.error;
+              return (this.error = true);
+            }
+          });
         }
-      });
-
-      return;
+      }
     });
   </script>
-
 </body>
 </html>
