--- a/public/static/styles/login.css
+++ b/public/static/styles/login.css
@@ -8,13 +8,10 @@ html,
 body {
   margin: 0;
   height: 100%;
-  color: #FFF;
-  font-family: 'Inter', bio-sans, sans-serif;
+  color: #fff;
+  font-family: "Inter", bio-sans, sans-serif;
   background: rgb(52, 54, 59);
-  background: linear-gradient(
-    180deg,
-    #34363B 0%,
-    #161517 100%);
+  background: linear-gradient(180deg, #34363b 0%, #161517 100%);
 }
 
 .container {
@@ -48,7 +45,7 @@ body {
 }
 
 .container .header .errors {
-  display: none;
+  /*   display: none; */
   color: rgb(245, 91, 91);
   font-weight: 500;
 }
@@ -62,17 +59,17 @@ body {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-
+  
   width: 330px;
   display: block;
   font: inherit;
   font-size: 14px !important;
-  color: #FFFFFF;
+  color: #ffffff;
   background: #414245;
   padding: 0.75em 1em;
   margin-bottom: 10px;
   border-radius: 4px;
-  border: 2px solid #68696B;
+  border: 2px solid #68696b;
 }
 
 .container .form .submit {
@@ -87,7 +84,7 @@ body {
   font-size: 14px !important;
   font-weight: 500;
   border-radius: 50px;
-  background: linear-gradient(180deg, #FFD155 0%, #FFB948 100%);
+  background: linear-gradient(180deg, #ffd155 0%, #ffb948 100%);
   border-color: rgba(255, 255, 255, 0.18);
   cursor: pointer;
 }
@@ -107,4 +104,5 @@ input:-webkit-autofill:active {
   -webkit-text-fill-color: #000000 !important;
   -webkit-box-shadow: 0 0 0 25px #faf16e inset !important;
   border-color: #6d643c !important;
+  box-shadow: 0 0 0 25px #faf16e inset;
 }
