--- a/panel/views/users_edit.ejs
+++ b/panel/views/users_edit.ejs
@@ -22,7 +22,7 @@
   new Vue({
     el: "#form",
     data: {
-      users: <%- users %>,
+      users: "<%- users %>",
       username: "<%- user.username %>",
       email: "<%- user.email %>",
       token: "<%- user.token %>"
