--- a/panel/views/register.ejs
+++ b/panel/views/register.ejs
@@ -14,53 +14,50 @@
     <div class="header">
       <img src="/static/images/logo.svg" height="72px" />
       <div class="title">Registration</div>
-      <div class="message"
-      >You'll need a registration key before continuing. Ask Kurisu for
-      one!</div
-      >
-      <div v-if="error" class="errors">{{ errorMessage }}</div>
+      <div class="message">You'll need a registration key before continuing. Ask Kurisu for one!</div>
+      <div class="errors" v-if="error">{{ errorMessage }}</div>
     </div>
     <div class="form">
       <form target="" id="form">
         <input
-        v-model="username"
-        id="username"
-        type="text"
-        placeholder="Username"
-        required
-        autocomplete="off"
+          v-model="username"
+          id="username"
+          type="text"
+          placeholder="Username"
+          required
+          autocomplete="off"
         />
         <input
-        v-model="email"
-        id="email"
-        type="email"
-        placeholder="Email"
-        required
-        autocomplete="off"
+          v-model="email"
+          id="email"
+          type="email"
+          placeholder="Email"
+          required
+          autocomplete="off"
         />
         <input
-        v-model="password"
-        id="password"
-        type="password"
-        placeholder="Password"
-        required
-        autocomplete="new-password"
+          v-model="password"
+          id="password"
+          type="password"
+          placeholder="Password"
+          required
+          autocomplete="new-password"
         />
         <input
-        v-model="password2"
-        id="password2"
-        type="password"
-        placeholder="Confirm Password"
-        required
-        autocomplete="new-password"
+          v-model="password2"
+          id="password2"
+          type="password"
+          placeholder="Confirm Password"
+          required
+          autocomplete="new-password"
         />
         <input
-        v-model="authkey"
-        id="authkey"
-        type="text"
-        placeholder="Registration Key"
-        required
-        autocomplete="off"
+          v-model="authkey"
+          id="authkey"
+          type="text"
+          placeholder="Registration Key"
+          required
+          autocomplete="off"
         />
         <div class="submit">
           <input @click="handleSubmit" type="submit" value="Register →" />
@@ -68,7 +65,7 @@
       </form>
     </div>
   </div>
-  
+
   <script>
     new Vue({
       el: "#app",
@@ -84,30 +81,29 @@
       methods: {
         handleSubmit: function(event) {
           event.preventDefault();
+
           var payload = {
             email: this.email,
             username: this.username,
             password: this.password,
             auth: this.auth
           };
-          if (
-          !this.email ||
-          !this.username ||
-          !this.password ||
-          !this.authkey
-          ) {
+
+          if (!this.email || !this.username || !this.password || !this.authkey) {
             this.errorMessage = "Please fill in all the fields";
             return (this.error = true);
           }
+
           if (this.password !== this.password2) {
             this.errorMessage = "Password Mismatch";
             return (this.error = true);
           }
+
           if (!/^[a-zA-Z0-9]+$/.test(this.username)) {
-            this.errorMessage =
-            "Usernames can only contain letters and numbers";
+            this.errorMessage = "Usernames can only contain letters and numbers";
             return (this.error = true);
           }
+
           axios.post("/api/register", payload).then(response => {
             if (response.data.ok) {
               window.location.replace("/panel/me");
